@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - no longer calling a keyword's callback during traverse() if that
+            keyword has an error
 
 0.514     2021-07-22 05:17:08Z
           - add_schema() now dies with the errors themselves, rather than an
